# homework1

calc/include/: add.hpp  astnode.hpp  number.hpp  variable.hpp
calc/src/: parser.cpp
container/: CMakeLists.txt  ListContainer.cpp  SerialContainer.cpp  main.cpp
game/: CMakeLists.txt  argument.cpp  check_value.cpp  check_value.h  high_scores.cpp  high_scores.h  high_scores.txt  random_value.cpp  random_value.h
homework/: CMakeLists.txt  example.cpp  hello_world.cpp  move_me_out.cpp  move_me_out.h
stats/: CMakeLists.txt  statistics.cpp
xo/: CMakeLists.txt  main.cpp  menu.hpp  menu1.hpp
